<resources>
    <string name="app_name">L04-Reservation</string>
    <string name="confirm">Confirm</string>
    <string name="reset_date_and_time">Reset Date and Time</string>
    <string name="reset_inputs">Reset inputs</string>
    <string name="smoking_area">Smoking Area</string>
    <string name="area">Area</string>
    <string name="enter_group_size">Enter Group Size</string>
    <string name="group_size">Group Size</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="enter_name">Enter Name</string>
    <string name="name">Name</string>
</resources>